--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -25,12 +25,10 @@
     </div>
   </div>
 
-  <!-- For video advertisement - if needed
+  <!-- For video advertisement - if needed add 
   <script src="rmp/rmp-vast/rmp-vast.min.js"></script> -->
   <!-- Radiant Media Player library for MPEG-DASH w/ Widevine DRM streaming
-  <script src="rmp/dist/rmp-shaka.min.js"></script> -->
-  <!-- Radiant Media Player library for HLS w/ FairPlay DRM streaming
-  <script src="rmp/dist/rmp.min.js"></script> -->
+  <script src="rmp/dist/rmp-shaka.min.js></script> -->
 
   <!-- Radiant Media Player library for HLS streaming -->
   <script src="rmp/dist/rmp-hlsjs.min.js"></script>
